--- a/2-LangChain提示词工程.ipynb
+++ b/2-LangChain提示词工程.ipynb
@@ -214,7 +214,7 @@
     "print(pm)\n",
     "\n",
     "# 和LLM连接起来，让其解释代码\n",
-    "from langchain_community.llms import OpenAI\n",
+    "from langchain_openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
@@ -274,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install jinja2"
+    "!pip install jinja2"
    ]
   },
   {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,18 +473,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "给我讲一个关于小黑的悲伤故事\n",
-      "给我讲一个关于小红的搞笑故事\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 引入包\n",
     "from langchain_core.prompts import load_prompt\n",
@@ -504,17 +495,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'answer': 'George Washington was born in 1732 and died in 1799.', 'score': '1/2'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 支持加载文件格式的模板,并且对prompt的最终解析结果进行自定义格式化\n",
     "from langchain.output_parsers import RegexParser\n",
@@ -536,32 +519,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatted Prompt: Given the following question and student answer, provide a correct answer and score the student answer.\n",
-      "Question: What is 2+2?\n",
-      "Student Answer: 4\n",
-      "Correct Answer:\n",
-      "Parsed Output: {'answer': 'George Washington was born in 1732 and died in 1799.', 'score': '1/2'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 使用提示词模板文件实现与上面相同功能\n",
     "import json\n",
     "from langchain_core.prompts import load_prompt\n",
     "\n",
-    "# 该方式目前版本不支持这样使用\n",
+    "# 该方式目前版本不支持这样使用 已过时\n",
     "# 加载json格式的prompt模板文件\n",
     "# prompt = load_prompt(path=\"prompt_with_output_parser.json\", encoding=\"utf-8\")\n",
-    "# prompt.output_parser.parse(\n",
+    "# parsed_output = prompt.output_parser.parse(\n",
     "#     \"George Washington was born in 1732 and died in 1799.\\nScore: 1/2\"\n",
     "# )\n",
+    "# print(parsed_output)\n",
     "\n",
     "# 读取 JSON 文件内容\n",
     "with open(\"prompt_with_output_parser.json\", \"r\", encoding=\"utf-8\") as f:\n",
@@ -599,7 +571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lang-chain-wYHJBg1W",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
